# bcmatroska2

./: BcMatroska2Config.cmake.in  CMakeLists.txt  Makefile  Matroska2Config.cmake.in
corec/corec/: CMakeLists.txt  portab.h
corec/corec/helpers/date/: date_win32.c
corec/corec/helpers/file/: file_libc.c  file_win32.c
libebml2/: CMakeLists.txt
libmatroska2/: CMakeLists.txt
